<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/img_register"
        android:src="@drawable/login"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <EditText
        android:id="@+id/edit_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="4dp"/>
    <EditText
        android:id="@+id/edit_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="4dp"/>
    <EditText
        android:id="@+id/edit_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_login"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="4dp"/>
    <EditText
        android:id="@+id/edit_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="4dp"/>

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="Register"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        />

</LinearLayout>